# algdspolytech20252026

./: CMakeLists.txt  main.c  tests.c
lab-A/: .gitignore  CMakeLists.txt  README.md  cover.c  cover.h  input.txt  main.c  priority_queue.c  priority_queue.h  test_priority_queue.c
lab-C/: .gitignore  CMakeLists.txt  README.md  dfs.c  dfs.h  main.c  test_dfs.c
